--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inception</title>
+    <link rel="shortcut icon" href="images/Logoimg.png" type="image/x-icon" />
+    <title>Khaoji</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
